--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          path: ./
+          name: setup_LEO.exe
+          path: installer/Output/mysetup.exe
